// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatmeterProgress renders correctly 1`] = `
<svg
  height="300px"
  viewBox="0 0 300 300"
  width="300px"
>
  <title>
    Chatmeter Progress
  </title>
  <ChatmeterSVGDefs />
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <path
      d="M58.8909951,148.32676 L58.7209951,148.38676 L27.1309951,159.29676 C25.1896347,159.900496 23.3902921,160.890304 21.8409951,162.20676 C19.810939,164.153597 18.6625281,166.844056 18.6609651,169.65676 C18.657259,173.13756 20.3869026,176.391725 23.2741225,178.335934 C26.1613425,180.280142 29.8270779,180.659141 33.0509951,179.34676 L33.1109951,179.34676 L33.4609951,179.17676 L159.130995,113.70676 L58.8909951,148.32676 Z"
      fill="#E4670D"
      fillRule="nonzero"
      id="Needle"
      transform="translate(88.895980, 146.912391) rotate(-156.000000) translate(-88.895980, -146.912391)"
    />
    <animateTransform
      attributeName="transform"
      begin="0s"
      dur="5s"
      from="0 150 150"
      repeatCount="indefinite"
      to="180 150 150"
      type="rotate"
    />
  </g>
  <ChatmeterSVGBars />
</svg>
`;

exports[`ChatmeterProgress should support progress mode 1`] = `
<svg
  height="300px"
  viewBox="0 0 300 300"
  width="300px"
>
  <title>
    Chatmeter Progress
  </title>
  <ChatmeterSVGDefs />
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <path
      d="M58.8909951,148.32676 L58.7209951,148.38676 L27.1309951,159.29676 C25.1896347,159.900496 23.3902921,160.890304 21.8409951,162.20676 C19.810939,164.153597 18.6625281,166.844056 18.6609651,169.65676 C18.657259,173.13756 20.3869026,176.391725 23.2741225,178.335934 C26.1613425,180.280142 29.8270779,180.659141 33.0509951,179.34676 L33.1109951,179.34676 L33.4609951,179.17676 L159.130995,113.70676 L58.8909951,148.32676 Z"
      fill="#E4670D"
      fillRule="nonzero"
      id="Needle"
      transform="translate(88.895980, 146.912391) rotate(-156.000000) translate(-88.895980, -146.912391)"
    />
    <animateTransform
      attributeName="transform"
      begin="0s"
      dur="0s"
      from="0 150 150"
      repeatCount={0}
      to="0 150 150"
      type="rotate"
    />
  </g>
  <ChatmeterSVGBars />
</svg>
`;

exports[`ChatmeterProgress should support timed mode 1`] = `
<svg
  height="300px"
  viewBox="0 0 300 300"
  width="300px"
>
  <title>
    Chatmeter Progress
  </title>
  <ChatmeterSVGDefs />
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <path
      d="M58.8909951,148.32676 L58.7209951,148.38676 L27.1309951,159.29676 C25.1896347,159.900496 23.3902921,160.890304 21.8409951,162.20676 C19.810939,164.153597 18.6625281,166.844056 18.6609651,169.65676 C18.657259,173.13756 20.3869026,176.391725 23.2741225,178.335934 C26.1613425,180.280142 29.8270779,180.659141 33.0509951,179.34676 L33.1109951,179.34676 L33.4609951,179.17676 L159.130995,113.70676 L58.8909951,148.32676 Z"
      fill="#E4670D"
      fillRule="nonzero"
      id="Needle"
      transform="translate(88.895980, 146.912391) rotate(-156.000000) translate(-88.895980, -146.912391)"
    />
    <animateTransform
      attributeName="transform"
      begin="0s"
      dur="10s"
      from="0 150 150"
      repeatCount="indefinite"
      to="180 150 150"
      type="rotate"
    />
  </g>
  <ChatmeterSVGBars />
</svg>
`;
